--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@react-router/dev": "^7.5.0",
@@ -23,7 +24,8 @@
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.5.3",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
